--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.2",
     "moment": "^2.20.1",
+    "now-env": "^3.0.3",
     "web3": "^1.0.0-beta.30"
   }
 }
