--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "micro"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "micro": "latest",
     "crypto": "^1.0.1",
     "express": "^4.16.2",
     "moment": "^2.20.1",
