Upgrade web3 to beta.30

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "crypto": "^1.0.1",
     "express": "^4.16.2",
     "moment": "^2.20.1",
-    "web3": "^1.0.0-beta2"
+    "web3": "^1.0.0-beta.30"
   }
 }
